--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+img  {
+  width: 100%; /* this sets the width of the image to 100% of its container  and the image is contained within the container. */
+}
+
 .container {
   margin: auto; 
 }
